<resources>
    <string name="app_name">appTest1</string>
    <string name="textview1">TeamA</string>
    <string name="textview2">TeamB</string>
    <string name="scoreA">0</string>
    <string name="scoreB">0</string>
    <string name="button1">+1</string>
    <string name="button2">+2</string>
    <string name="button3">+3</string>
    <string name="undoButton">undo</string>
    <string name="loopButton">loop</string>
</resources>